# jupyter-extensions

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md
.github/scripts/: detect_changed_packages.py
.github/workflows/: ci.yml  release.yml  security-analysis.yml  swan-ci-ca.yml
HdfsBrowser/: .bumpversion.cfg  .gitignore  .prettierignore  MANIFEST.in  Makefile  README.md  RELEASE.md  install.json  package.json  pyproject.toml  setup.py  webpack.config.js
HdfsBrowser/hdfsbrowser/: __init__.py  _version.py  serverextension.py
K8sSelection/: .gitignore  MANIFEST.in  Makefile  README.md  package.json  setup.py  webpack.config.js
SaveFailedPopup/: .bumpversion.cfg  MANIFEST.in  README.md  setup.py
SparkConnector/: .bumpversion.cfg  .eslintrc.js  .gitignore  .prettierignore  MANIFEST.in  Makefile  README.md  RELEASE.md  install.json  package.json  setup.py  tsconfig.json  webpack.config.js
SparkMonitor/: .bumpversion.cfg  MANIFEST.in  Makefile  README copy.md  README.md  package.json  setup.py  webpack.config.js
SwanCernbox/: .gitignore  README.md  eslint.config.mjs  install.json  package-lock.json  package.json  pyproject.toml  setup-fake-eos.sh  stylelint.config.mjs  tsconfig.json
SwanCernbox/schema/: quota.json  shares.json  spaces.json
SwanCernbox/src/: icons.ts  index.ts  quota-widget.ts  quota.ts  shares-widget.ts  shares.ts  spaces-widget.ts  spaces.ts
SwanCernbox/style/: base.css
SwanCernbox/swancernbox/: __init__.py
SwanContents/: .bumpversion.cfg  .gitignore  .prettierignore  MANIFEST.in  README.md  install.json  package.json  setup.py
SwanCustomEnvironments/: .bumpversion.cfg  .gitignore  .prettierignore  README.md  RELEASE.md  install.json  package.json  pyproject.toml  setup.py
SwanDask/: .bumpversion.cfg  MANIFEST.in  README.md  setup.py
SwanFileBrowser/: MANIFEST.in  README.md  install.json  package.json  pyproject.toml  setup.py
SwanGallery/: .gitignore  .prettierignore  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE.md  conftest.py  install.json  package-lock.json  package.json  pyproject.toml  setup.py  tsconfig.json  webpack.config.js
SwanGallery/.github/workflows/: build.yml  check-release.yml
SwanGallery/SwanGallery/: __init__.py  handlers.py
SwanGallery/SwanGallery/tests/: __init__.py  test_handlers.py
SwanGallery/js/: extension.js
SwanGallery/js/templates/: notebook.html
SwanGallery/jupyter-config/nb-config/: SwanGallery.json
SwanGallery/jupyter-config/server-config/: SwanGallery.json
SwanGallery/src/: handler.ts  icons.ts  index.ts
SwanGallery/src/__tests__/: SwanGallery.spec.ts
SwanGallery/swangallery/: __init__.py  gallery.py
SwanGallery/ui-tests/: package.json
SwanGallery/ui-tests/tests/: SwanGallery.spec.ts
SwanHeader/: .bumpversion.cfg  .gitignore  .prettierignore  MANIFEST.in  README.md  RELEASE.md  install.json  package-lock.json  package.json  pyproject.toml  setup.py
SwanHelp/: .bumpversion.cfg  .gitignore  MANIFEST.in  Makefile  README.md  RELEASE.md  install.json  package-lock.json  package.json  pyproject.toml  setup.py  tsconfig.json  webpack.config.js
SwanIntro/: .bumpversion.cfg  MANIFEST.in  Makefile  README.md  package-lock.json  package.json  setup.py  tsconfig.json  webpack.config.js
SwanKernelEnv/: .bumpversion.cfg  README.md  setup.py
SwanML/: .bumpversion.cfg  .gitignore  .prettierignore  .prettierrc.json  .stylelintrc.json  README.md  eslint.config.mjs  install.json  package-lock.json  package.json  pyproject.toml  tsconfig.json
SwanML/jupyter-config/server-config/: swan-mlcern-status.json
SwanML/src/: RunStatusPanel.tsx  api.ts  helpers.ts  index.ts  typings.d.ts
SwanML/style/: index.css
SwanML/swan_ml/: __init__.py  _version.py  config.py  handlers.py  ml.py
SwanMarimoProxy/: .bumpversion.cfg  README.md  pyproject.toml
SwanMarimoProxy/swan_marimo_proxy/: __init__.py  _setup.py  _version.py
SwanMarimoProxy/tests/: test_setup.py
SwanMetrics/: .bumpversion.cfg  README.md  pyproject.toml
SwanMetrics/jupyter_server_config.d/: swanmetrics.json
SwanMetrics/swanmetrics/: __init__.py  _version.py
SwanNotebookViewer/: .bumpversion.cfg  README.md  setup.py
SwanNotifications/: .bumpversion.cfg  .gitignore  MANIFEST.in  Makefile  README.md  package-lock.json  package.json  setup.py  version.py  webpack.config.js
SwanOauthRenew/: .bumpversion.cfg  README.md  pyproject.toml  setup.py
SwanPortAllocator/: .bumpversion.cfg  MANIFEST.in  README.md  pyproject.toml  setup.py
SwanProjects/: .bumpversion.cfg  .gitignore  .prettierignore  MANIFEST.in  README.md  install.json  package.json  pyproject.toml  setup.py
SwanProjects/jupyter-config/nb-config/: swanprojects.json
SwanProjects/jupyter-config/server-config/: swanprojects.json
SwanProjects/src/: Components.tsx  ProjectDialog.tsx  ProjectWidget.tsx  dialog.tsx  icons.ts  index.ts  launcher-plugin.ts  launcher.tsx  project-dialog.tsx  project-form.tsx  project-plugin.ts  request.ts  requests.ts  theme-provider.tsx  types.tsx
SwanProjects/src/components/: card.tsx  help-tooltip.tsx  project-header.tsx
SwanProjects/style/: base.css  dialog.css  index.css  launcher-custom.css
SwanProjects/swanprojects/: __init__.py  _version.py  config.py  handlers.py  stacks.json  swanprovisioner.py  utils.py
SwanProjects/swanprojects/kernelmanager/: kernelspecmanager.py
SwanProjects/swanprojects/kernels/python-custom/: kernel.json
SwanProjects/swanprojects/stacks/CMSSW/: config.json  setup.sh
SwanProjects/swanprojects/stacks/FCCSW/: README.md  config.json  setup.sh
SwanProjects/swanprojects/stacks/LCG/: config.json  setup.sh
SwanProjects/swanprojects/static/: index.html
SwanShare/: .bumpversion.cfg  MANIFEST.in  Makefile  README.md  package.json  setup.py  webpack.config.js
SwanThemeDark/: .gitignore  MANIFEST.in  README.md  install.json  package.json  setup.py
binder/: environment.yml  postBuild  start
templates/: browser-open.html  download.html  edit.html  gallery.html  login.html  notebook.html  notebook_view.html  page.html  terminal.html  tree.html
(+239 files in other folders)
