[build-system]
requires = ["hatchling==1.28.0", "hatch-nodejs-version==0.4.0", "jupyterlab>=4.5.0,<5"]
build-backend = "hatchling.build"

[project]
name = "swancernbox"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dynamic = ["version", "description", "authors", "urls", "keywords"]

[tool.hatch.build.targets.wheel.shared-data]
"swancernbox/labextension" = "share/jupyter/labextensions/@swan-cern/swancernbox"
"install.json" = "share/jupyter/labextensions/@swan-cern/swancernbox/install.json"

[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls"]

[tool.hatch.build.hooks.version]
path = "swancernbox/_version.py"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder==0.9.1"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "swancernbox/labextension/static/style.js",
    "swancernbox/labextension/package.json",
]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "src"
build_dir = "swancernbox/labextension"

[tool.jupyter-releaser.options]
version_cmd = "hatch version"

[tool.jupyter-releaser.hooks]
before-build-npm = [
    "python -m pip install 'jupyterlab>=4.5.0,<5'",
    "jlpm",
    "jlpm build:prod"
]
before-build-python = ["jlpm clean:all"]
